[gd_scene load_steps=25 format=2]

[ext_resource path="res://mobs/mad_martha_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://mobs/Bad_bob.gd" type="Script" id=2]
[ext_resource path="res://media/textures/PNG (Transparent)/smoke_04.png" type="Texture" id=3]
[ext_resource path="res://media/textures/PNG (Transparent)/flare_01.png" type="Texture" id=4]
[ext_resource path="res://media/sounds/Cloud Click.wav" type="AudioStream" id=5]
[ext_resource path="res://media/sounds/explosion09.wav" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.653123, 0.998789, 0.548773 )

[sub_resource type="SphereShape" id=2]
radius = 25.0509

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:light_energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 3.0, 0.0, 3.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:light_energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 3.0, 0.0, 3.0 ]
}

[sub_resource type="Curve" id=7]
min_value = -1.0
_data = [ Vector2( 0, 0.059091 ), 0.0, 1.63226, 0, 0, Vector2( 0.966942, 0.0772728 ), -1.32, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.0363636 ), 0.0, 3.80769, 0, 0, Vector2( 0.570248, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0545454 ), -2.31579, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3( 0, 0.5, 0 )
scale_curve = SubResource( 10 )
hue_variation = -0.17
hue_variation_curve = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=12]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=13]
material = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0409091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
direction = Vector3( 0, 1, 0 )
spread = 104.14
gravity = Vector3( 0, -1, 0 )
initial_velocity = 20.0
scale = 7.0
scale_curve = SubResource( 15 )

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=18]
material = SubResource( 17 )

[node name="Bad_bob" type="KinematicBody" groups=[
"Enemy",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.37173, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.61454, -0.0330389 )
shape = SubResource( 1 )

[node name="Turret" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.611726, 0.689748, -0.678802 )

[node name="Area" type="Area" parent="."]
monitorable = false
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Sightline" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.848479, -0.520659 )
enabled = true
cast_to = Vector3( 0, 0, -40 )
collide_with_areas = true

[node name="network_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="scan_timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
autostart = true

[node name="next_action" type="Timer" parent="."]
autostart = true

[node name="light2" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.335654, 1.48067, -0.105504 )
mesh = SubResource( 3 )
material = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="light2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="light2"]
transform = Transform( 0.960585, 0.277985, 0, -0.277985, 0.960585, 0, 0, 0, 1, 0.0615215, 0.0139349, 0 )
light_color = Color( 0.356863, 0.921569, 0.0666667, 1 )
light_energy = 2.39803
omni_range = 0.560783

[node name="light3" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00431263, 0.955106, -0.363742 )
visible = false
mesh = SubResource( 3 )
material = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="light3"]
transform = Transform( 0.960585, 0.277985, 0, -0.277985, 0.960585, 0, 0, 0, 1, 0, 0, 0 )
light_color = Color( 0.956863, 0.537255, 0.0431373, 1 )
light_energy = 2.39803
omni_range = 0.560783

[node name="light1" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.335516, 1.49006, -0.109675 )
mesh = SubResource( 3 )
material = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="light1"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 6 )

[node name="OmniLight" type="OmniLight" parent="light1"]
transform = Transform( 0.960585, 0.277985, 0, -0.277985, 0.960585, 0, 0, 0, 1, -0.0768741, 0.0139349, 0 )
light_color = Color( 0.356863, 0.921569, 0.0666667, 1 )
light_energy = 3.0
omni_range = 0.560783

[node name="Explosion" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39389, 0 )

[node name="Particles" type="Particles" parent="Explosion"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.124988, 0 )
emitting = false
amount = 20
lifetime = 3.0
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 13 )

[node name="Particles2" type="Particles" parent="Explosion"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.133302, -1.09342, -0.0971439 )
emitting = false
amount = 20
lifetime = 0.49
one_shot = true
explosiveness = 0.88
process_material = SubResource( 16 )
draw_pass_1 = SubResource( 18 )

[node name="Hit_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 25.0
unit_size = 9.6

[node name="Explode_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 30.0

[node name="mad_martha" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.609066, 0 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="network_timer" to="." method="_on_network_timer_timeout"]
[connection signal="timeout" from="scan_timer" to="." method="_on_scan_timer_timeout"]
[connection signal="timeout" from="next_action" to="." method="_on_next_action_timeout"]
